--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Join Us</title>
+    <title>Tech Blog</title>
     <link rel="icon" type="image/x-icon" href="/images/logo.png" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link
@@ -34,14 +34,10 @@
           class="container flex flex-wrap justify-between items-center mx-auto"
         >
           <a href="/" class="flex items-center">
-            <img
-              src="/images/logo.png"
-              class="mr-3 h-6 sm:h-9"
-              alt="Join Us Logo"
-            />
+            
             <span
               class="self-center text-xl font-semibold whitespace-nowrap dark:text-white"
-            >Join Us</span>
+            >Tech Blog</span>
           </a>
 
           <div class="flex items-center md:order-2">
@@ -183,12 +179,7 @@
                 >Dashboard</a>
               </li>
 
-               <li>
-                <a
-                  href="/attributions"
-                  class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-white md:hover:text-blue-700 md:p-1 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
-                >Attributions</a>
-              </li>
+         
             
             </ul>
           </div>
@@ -204,10 +195,10 @@
       <div class="md:flex md:justify-between">
         <div class="mb-6 md:mb-0 pr-4">
           <a href="#" class="flex items-center">
-            <img src="/images/logo.png" class="mr-3 h-8" alt="Join Us Logo" />
+            
             <span
               class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
-            >Join Us</span>
+            >Tech Blog</span>
           </a>
         </div>
         <div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-4">
@@ -332,7 +323,7 @@
     
     <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
     <script src="/javascript/dark-mode.js"></script>
-   <script src="/javascript/comment.js" type="module"></script>
+    
     
     {{#if loggedIn}}
       <script src='/javascript/logout.js' type="module"></script>
