--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -322,11 +322,12 @@
     
     
     <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
-    <script src="/javascript/dark-mode.js"></script>
+    
     
     
     {{#if loggedIn}}
       <script src='/javascript/logout.js' type="module"></script>
+      <script src='/javascript/add-post.js' type="module"></script>
     {{/if}}
         
         
