--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,3 +1,11 @@
+
+
+{{#if loggedIn}}  {{! change this to logged in from true after testing }}
+{{> event-form}}
+{{/if}}
+
+
+
 {{#each posts}}
 <article class="p-6 bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
               <div class="flex justify-between items-center mb-5 text-gray-500">
